Added a New Ocean Fact

--- a/sara.ipynb
+++ b/sara.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "f3bb5b48",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,8 @@
     "    17: \"The ocean floor contains hydrothermal vents that support entire ecosystems without sunlight.\",\n",
     "    18: \"Tsunamis can travel across the ocean at speeds up to 800 kilometers per hour.\",\n",
     "    19: \"Icebergs are made of freshwater, not saltwater.\",\n",
-    "    20: \"The ocean's tides are primarily caused by the gravitational pull of the Moon and the Sun.\"\n",
+    "    20: \"The ocean's tides are primarily caused by the gravitational pull of the Moon and the Sun.\",\n",
+    "    21: \"Coral reefs support about 25% of all marine species despite covering less than 1% of the ocean floor.\"\n",
     "}\n",
     "\n",
     "    random_fact = random.choice(list(OceanFacts.values()))\n",
