--- a/sara.ipynb
+++ b/sara.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "ab35b857",
    "metadata": {},
    "outputs": [],
@@ -60,13 +60,25 @@
     "    \"no\": \"That's okay! 👌\"\n",
     "}\n",
     "\n",
+    "# Compliment list for random generation\n",
+    "Compliments = [\n",
+    "    \"You're absolutely glowing today! ✨\",\n",
+    "    \"Your energy is unmatched bestie! 💫\",\n",
+    "    \"You're crushing it today! 🔥\",\n",
+    "    \"Your vibe is immaculate! 💯\",\n",
+    "    \"You're literally so cool! 😎\",\n",
+    "    \"Main character energy right here! 🌟\",\n",
+    "    \"You're goals honestly! 👑\",\n",
+    "    \"Living rent-free in everyone's mind! 💭\"\n",
+    "]\n",
+    "\n",
     "# User information dictionary\n",
     "User = dict()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "0ff2d624",
    "metadata": {},
    "outputs": [],
@@ -80,6 +92,10 @@
     "        print(f\"Bot: {Responses[Input_Var]}\")\n",
     "    else:\n",
     "        print(\"Bot: Hmm… tell me more bestie! 🤔\")\n",
+    "    \n",
+    "    # 20% chance to give a random compliment\n",
+    "    if random.random() < 0.2:\n",
+    "        print(f\"Bot: {random.choice(Compliments)}\")\n",
     "\n",
     "def EndChat(Input_Var):\n",
     "    if Input_Var == \"bye\":\n",
